content/versioned/2.0/roadmap.mdx
---
title: Roadmap
description: What shipped in Nucleus 2.0, the modules planned for 2.1 and 2.2, and features under consideration.
---

Nucleus 2.0 provides the runtime and packaging foundation. Later releases add
OS-integration modules for capabilities that JVM desktop apps otherwise reach through
JavaScript or hand-written native code. This page lists what has shipped, what is planned,
and what is still speculative.

## Shipped in 2.0

- `nucleusApplication { }` unified entry point — single-instance, deep links, AOT, GraalVM init, AutoLaunch priming, Windows AUMID — all automatic.
- Tao backend — Wayland-native, multi-touch, pen pressure + tilt, native popups, embedded `NativeView`, drag-and-drop with diagnostics.
- 18 packaging formats from one Gradle DSL.
- `updater-runtime` — electron-builder-compatible auto-update, channels, post-update detection.
- GraalVM Native Image — end-to-end packaging pipeline (DMG, NSIS, DEB), static bytecode reflection analyzer, per-library reachability metadata.
- macOS Liquid Glass on SDK 26 — `vtool` patching means any JDK works.
- 40+ runtime modules: notifications, system tray, global hotkeys, media controls, taskbar progress, energy manager, system info, scheduler, autolaunch, dark mode, system color, native SSL, native HTTP, filesystem watcher, decorated windows with four toolkits.

## Coming in 2.1

The first module group covers security and identity:

| Module | Description | macOS | Windows | Linux |
|--------|-------------|-------|---------|-------|
| `secure-storage` | Hardware-backed secret storage for tokens, passwords, keys | Keychain | Credential Manager / DPAPI | Secret Service (`libsecret`) |
| `biometric-auth` | Prompt for fingerprint / face authentication | `LocalAuthentication` (Touch ID / Face ID) | Windows Hello | `fprintd` via D-Bus / polkit |

## Coming in 2.2

OS-level events and IO:

| Module | Description | macOS | Windows | Linux |
|--------|-------------|-------|---------|-------|
| `share-sheet` | OS share sheet (URL, file, text) | `NSSharingService` | Windows `DataTransferManager` | xdg-desktop-portal `Share` |
| `power-events` | Sleep / wake / lock / unlock / screen-off / battery state | `NSWorkspace` notifications | `WM_POWERBROADCAST` / `WTSRegisterSessionNotification` | `org.freedesktop.login1` D-Bus signals |

## Under consideration

Speculative — no commitment, no ETA. Open an issue if you want one of these earlier:

| Module | Description | macOS | Windows | Linux |
|--------|-------------|-------|---------|-------|
| `clipboard` | Rich clipboard — image, files, HTML, RTF — plus change watcher | `NSPasteboard` | `OleGetClipboard` / Clipboard History API | `wl-clipboard` / X11 selections |
| `screen-capture` | Native screenshot / screen recording | `CGDisplayCreateImage` / ScreenCaptureKit | Windows Graphics Capture / DXGI | xdg-desktop-portal `Screenshot` |

## Influence the order

Open an issue describing your use case, link a sample app that needs the module, or sponsor
a specific platform's implementation. Native modules are bounded mostly by JNI bridge
complexity per OS — the more people that need one, the sooner it ships.

## What's next

- [Changelog](/docs/changelog) — released versions and what each one contains.
- [Modules](/docs/concepts/modules) — how runtime modules are structured and added to a build.
- [Ecosystem](/docs/ecosystem) — the modules available today.
